add animation script for gifs, add glaciers to elevation map

--- a/environment.yml
+++ b/environment.yml
@@ -3,24 +3,17 @@ channels:
   - conda-forge
   - defaults  
 dependencies:
-  - python=3.7
+  - python
   - pip
   - numpy
-  - scipy
   - matplotlib
   - pandas
   - netcdf4
   - xarray
-  - dask
-  - bottleneck
   - cartopy
   - cmocean
   - seaborn
   - cmocean
-  - metpy
   - ipykernel
-  - jupyter
-  - ffmpeg
   - geopandas
-  - pip:
-    - boto3
+
