--- a/environment.yml
+++ b/environment.yml
@@ -20,9 +20,11 @@ dependencies:
   - dask
   - metpy
   - xoak
+  - odc-geo
   
   - pip:
     - rasterio
-    - rioxarray
+    - rioxarray==0.3.1
+    - earthpy
 
 
